--- a/Angular_SICDOC/sicdoc/src/app/views/contactos/contactos.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/contactos/contactos.component.html
@@ -25,7 +25,7 @@
                       <th>Institucion</th>
                       <th>Contacto SRECI</th>
                       <!-- <th>Codigo</th> -->
-                      <th>Edit</th>
+                      <th>Dowload</th>
                   </tr>
               </thead>
               <tbody>
@@ -38,14 +38,14 @@
                   <td >{{ item.idInstitucion.descInstitucion }}</td>
                   <td >{{ item.idFuncionario.nombre1Funcionario }}
                        {{ item.idFuncionario.apellido1Funcionario }}</td>
-                  <!-- <td >{{ item.codContacto }}</td> -->
-                  <!-- <td style="width:20px"><a href="/#" data-toggle="modal" data-target="#t_and_c_m" ><i class="material-icons">pageview</i></a></td> -->
-                  <td> <a  href="/#" (click)="datoOficio( item.codCorrespondenciaEnc, item.codReferenciaSreci,
-                                   item.idDeptoFuncional.idDeptoFuncional,
-                                   item.idFuncionarioAsignado.nombre1Funcionario, item.idFuncionarioAsignado.apellido1Funcionario,
-                                   item.idFuncionarioAsignado.nombre2Funcionario, item.idFuncionarioAsignado.apellido2Funcionario,
-                                   item.idFuncionarioAsignado.idFuncionario, item.idEstado.idEstado, item.idCorrespondenciaEnc );"
-                         data-toggle="modal" data-target="#t_and_c_m" ><i class="material-icons">assignment</i> </a>
+                  <td> <a *ngIf="item.perfilContacto != null && item.perfilContacto.length > 5"
+                        href="http://localhost/sicdoc/symfony/web/uploads/contactos/perfiles/{{ item.perfilContacto }}">
+                          <i class="material-icons">picture_as_pdf</i>
+                      </a>
+                      <a *ngIf="item.fotoContacto != null && item.fotoContacto.length > 5" 
+                        href="http://localhost/sicdoc/symfony/web/uploads/contactos/perfiles/{{ item.fotoContacto }}" target="_blank">
+                          <i class="material-icons">photo</i>
+                      </a>
                   </td>
                 </tr>
               <tbody>
