--- a/Angular_SICDOC/sicdoc/src/app/views/comunicaciones/ingreso.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/comunicaciones/ingreso.component.html
@@ -303,11 +303,11 @@
       </div>
       <hr>
 
-			<div class="row">
+			<!-- <div class="row">
 				<div class="col-xs-8 col-sm-9 col-md-9">
 					 Para saber mas de utilidad de esta aplicacion, verifica los <a href="#" data-toggle="modal" data-target="#t_and_c_m"> manuales de usuario </a> que tiene este sistema.
 				</div>
-			</div>
+			</div> -->
 
 			<hr class="colorgraph">
 			<div class="row">
@@ -338,10 +338,10 @@
         <li class="list-group-item"> <i class="material-icons">assignment_late</i> Oficios Pendientes -- <span class="badge badge-pill badge-warning"> {{ countOficiosPendientes }} </span> </li>
         <li class="list-group-item"> <i class="material-icons">assignment_turned_in</i> Oficios Finalizados -- <span class="badge badge-pill badge-danger"> {{ countOficiosFinalizados }} </span> </li>
       </ul>
-        <div class="card-block" style="margin-left:8px">
+        <!-- <div class="card-block" style="margin-left:8px">
           <a href="#" class="card-link">Ver tablero</a>
           <a [routerLink]="['/index']" class="card-link">Ir a Dashboard</a>
-        </div>
+        </div> -->
     </div>
 
     <!-- <div class="card" style="width: 16rem; margin-top:5px">
